# XControl

./: .gitignore  CMakeLists.txt  main.c
go_server/: docker-compose.yaml
go_server/cmd/: main.go
go_server/types/: command.go
go_server/utils/: DatabaseHelper.go  controllers.go
include/: OSInfo.h  curlhelper.h  defender.h  encoding.h  fbuf_fwd.h  file_util.h  formatter.h  json_util.h  keyboard_hook.h  my_string.h  myzip.h  proxy_info.h  resource_monitor.h  resources_def.h  resources_fwd.h  server.h  string_fwd.h  thutil.h  types.h  util.h  win_misc.h  win_process.h
src/: OSInfo.c  curlhelper.c  file_util.c  formatter.c  keyboard_hook.c  myzip.c  proxy.c  resource_monitor.c  server.c  string.c  thutil.c  winapi_funcs.c
tests/: CMakeLists.txt
tests/api/: CMakeLists.txt  win_api_get_services.c  win_api_test_OSInfo.c  winapi_run_process.c
tests/io/: CMakeLists.txt  test_fileutils.c
tests/zlib/: CMakeLists.txt  compress_small.c  test_compress.c  test_compress_screen.c
